feat: add some logic